--- a/FirstCSRF.html
+++ b/FirstCSRF.html
@@ -1,1 +1,14 @@
+form action='/transfer' method="POST">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputTo">To</label>
+                <input type="text" class="form-control" id="inputTo" name="user_to" placeholder="Who do you want to transfer to?">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputAmount">Amount</label>
+                <input type="number" class="form-control" id="inputAmount" name="10000" placeholder="Amount to transfer">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Send the Money!</button>
+          </form>
 
