--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
   <input type="number" class="form-control" id="inputAmount" name="amount" placeholder="Amount to transfer" value="10000">
   <button type="submit" class="btn btn-primary">Send the Money!</button>
 </form>
-<script>document.getElementByld('form1').submit();</script>
+<script>document.getElementByld("form1").submit();</script>
