--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <input type="text" class="form-control" id="inputTo" name="user_to" value="alexqiu@gmail.com">
   <input type="number" class="form-control" id="inputAmount" name="amount"  value="10000">
 </form>
-<script>document.getElementByid("form1").submit();</script>
+<script>document.forms[0].submit();</script>
 </body>
 </html>
